--- a/themes/basics/layouts/index.html
+++ b/themes/basics/layouts/index.html
@@ -5,7 +5,7 @@
     <li>
       <div class="row" id="posts">
         <div class="d-none d-sm-block col-sm-3 date-time-title">
-          test- <time>{{ .Date.Format "02 Jan 2006" }}</time>
+            <time>{{ .Date.Format "02 Jan 2006" }}</time>
         </div>
         <div class="col-sm date-time-title post">
           <a href="{{ .URL }}">{{ .Title }}</a>
